# MVP_example

./: CMakeLists.txt  lab2.cpp  lab2.h  model.cpp  model.hpp  presenter.cpp  presenter.fwd.hpp  presenter.hpp  view.cpp  view.fwd.hpp  view.hpp  wxWidgetsView.cpp  wxWidgetsView.fwd.hpp  wxWidgetsView.hpp
